--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -2,27 +2,146 @@
 // This file contains styles that are specific to the home page.
 // -----------------------------------------------------------------------------
 html {
-    background-color: #a2b2be;
+    background-color: rgb(102, 103, 171);
 }
 
-#tabs {
+///-----------------------------START TABS-------------------------------------------------------
+#bang {
+    transform: translateY(50%);
     &.container {
         width: 1200px;
         padding-left: 100px;
         padding-right: 100px;
-        .tab_items{
+        .tab-its {
             display: flex;
-            justify-content: space-around;
-            padding: 20px 15px;
+            justify-content: space-between;
+            // padding: 20px 15px;
             background-color: #fff;
-            i{
+            position: relative;
+            .tab-it {
+                // min-width: 80px;
+                width: 260px;
+                padding: 16px 20px 11px 20px;
+                font-size: 20px;
+                text-align: center;
+                color: #c23564;
+                background-color: #fff;
+                border-top-left-radius: 5px;
+                border-top-right-radius: 5px;
+                border-bottom: 5px solid transparent;
+                opacity: 0.6;
+                cursor: pointer;
+                transition: all 0.5s ease;
+                &:hover {
+                    opacity: 1;
+                    background-color: rgba(194, 53, 100, 0.05);
+                    border-color: rgba(194, 53, 100, 0.1);
+                }
+                &.active {
+                    opacity: 1;
+                }
+            }
+            i {
                 margin-right: 5px;
             }
+            .line {
+                position: absolute;
+                left: 0;
+                bottom: 0;
+                width: 0;
+                height: 6px;
+                border-radius: 15px;
+                background-color: #fd333f;
+                transition: all 0.2s ease;
+            }
         }
-        .tab_contents{
-            display: block;
+        .tab-cons {
             background-color: #fff;
             padding: 10px 55px 20px;
+            .tab-con {
+                color: #333;
+                display: none;
+                &.active {
+                    display: block;
+                }
+
+                h2 {
+                    font-size: 24px;
+                    margin-bottom: 8px;
+                }
+            }
         }
     }
+
+    .tab-icon {
+        font-size: 24px;
+        width: 32px;
+        position: relative;
+        top: 2px;
+    }
 }
+
+///-----------------------------END TABS-------------------------------------------------------
+
+// #ta{
+//     background-color: #fff;
+//     transform: translateY(50%);
+
+// }
+// .tabs {
+//     display: flex;
+//     position: relative;
+
+//   }
+//   .tabs .line {
+//     position: absolute;
+//     left: 0;
+//     bottom: 0;
+//     width: 0;
+//     height: 6px;
+//     border-radius: 15px;
+//     background-color: #c23564;
+//     transition: all 0.2s ease;
+//   }
+//   .tab_item {
+//     min-width: 80px;
+//     padding: 16px 20px 11px 20px;
+//     font-size: 20px;
+//     text-align: center;
+//     color: #c23564;
+//     background-color: #fff;
+//     border-top-left-radius: 5px;
+//     border-top-right-radius: 5px;
+//     border-bottom: 5px solid transparent;
+//     opacity: 0.6;
+//     cursor: pointer;
+//     transition: all 0.5s ease;
+//   }
+//   .tab-icon {
+//     font-size: 24px;
+//     width: 32px;
+//     position: relative;
+//     top: 2px;
+//   }
+//   .tab_item:hover {
+//     opacity: 1;
+//     background-color: rgba(194, 53, 100, 0.05);
+//     border-color: rgba(194, 53, 100, 0.1);
+//   }
+//   .tab_item.active {
+//     opacity: 1;
+//   }
+//   .tab-content {
+//     padding: 28px 0;
+//   }
+//   .tab-pane {
+//     color: #333;
+//     display: none;
+//   }
+//   .tab-pane.active {
+//     display: block;
+//   }
+//   .tab-pane h2 {
+//     font-size: 24px;
+//     margin-bottom: 8px;
+//   }
